--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,8 @@ jobs:
           command: |
             mkdir -p ~/test-results/junit/
             find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
+            mkdir -p ~/test-results/serenity/
+            find . -type f -regex ".*/target/site/serenity/.*html" -exec cp {} ~/test-results/serenity/ \;
           when: always
       - store_test_results:
           path: ~/test-results
