--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
             mkdir -p ~/test-results/junit/
             find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
             mkdir -p ~/test-results/serenity/
-            find . -type f -regex ".*/target/site/serenity/.*html" -exec cp {} ~/test-results/serenity/ \;
+            find . -type f -regex ".*/target/site/serenity/*index.html" -exec cp {} ~/test-results/serenity/ \;
           when: always
       - store_test_results:
           path: ~/test-results
